# tinyap

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  config.yaml  schema.sql  scheme.sql
src/: ap.rs  auth.rs  boost.rs  delete.rs  follow.rs  like.rs  main.rs  note.rs  state.rs  user.rs  web.rs
src/activitypub/: actor.rs  inbox.rs  mod.rs  nodeinfo.rs  note.rs  webfinger.rs
src/activitypub/inbox/: accept.rs  announce.rs  create.rs  delete.rs  follow.rs  like.rs  undo.rs
src/ap/: actor.rs  inbox.rs  nodeinfo.rs  note.rs  outbox.rs  utils.rs  webfinger.rs
src/ap/inbox/: accept.rs  announce.rs  create.rs  delete.rs  follow.rs  like.rs  undo.rs
src/api/: accounts.rs  auth.rs  context.rs  favourite.rs  follow.rs  following.rs  instance.rs  lists.rs  mod.rs  notifications.rs  reblog.rs  relationships.rs  search.rs  statuses.rs  timeline.rs  update_credentials.rs  verify_credentials.rs
src/api/accounts/: mod.rs
src/api/oauth/: apps.rs  authorize.rs  mod.rs  token.rs
src/back/: auth.rs  boost.rs  follow.rs  init.rs  like.rs  mod.rs  mute.rs  note.rs  notification.rs  queries.rs  search.rs  user.rs  utils.rs
src/back/queries/: block.rs  boost.rs  follow.rs  like.rs  mod.rs  mute.rs  note.rs  notification.rs  oauth.rs  session.rs  timeline.rs  user.rs
src/cli/: block.rs  help.rs  mod.rs  parse.rs  passwd.rs  serve.rs  useradd.rs  version.rs
src/web/: auth.rs  boost.rs  delete.rs  federated.rs  follow.rs  following.rs  follows.rs  home.rs  index.rs  like.rs  local.rs  login.rs  logout.rs  mod.rs  mute.rs  new.rs  note.rs  notifications.rs  profile.rs  search.rs  signup.rs  timeline.rs  user.rs
static/: style.css
templates/: following.html  follows.html  home.html  index.html  local.html  login.html  logout.html  new.html  note.html  notifications.html  profile.html  search.html  signup.html  timeline.html  user.html
templates/parts/: head.html  header.html
