[package]
name = "tinyap"
version = "1.0.0-alpha"
edition = "2024"

[features]
default = ["sqlite", "web"]
web = []
tls = ["axum-server/tls-rustls"]
sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio"]
postgres = ["sqlx/postgres", "sqlx/runtime-tokio"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-recursion = "1"
axum = { version = "0.8", features = ["json"] }
axum-extra = { version = "0.12", features = ["cookie"] }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
tower-http = { version = "0.6", features = ["fs"] }
time = "0.3"
tera = { version = "1", features = ["builtins", "date-locale"] }
sqlx = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

argon2 = "0.5"
rand = "0.8"
rsa = { version = "0.9", features = ["sha2"] }

reqwest = { version = "0.12", features = ["json"] }
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.22"
url = "2"

regex = "1"
