[package]
name = "tinyap"
version = "0.1.4"
edition = "2024"

[features]
default = []
mimalloc = ["dep:mimalloc"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres", "sqlx/tls-rustls"]
web = ["tower-http/fs"]
api = ["tower-http/cors", "serde_urlencoded", "axum/multipart"]
tls = ["axum-server/tls-rustls", "rustls"]

[dependencies]
mimalloc = { version = "*", features = ["v3"], optional = true }

tokio = { version = "1", features = ["full"] }
async-recursion = "1"
axum = { version = "0.8", features = ["json"] }
axum-extra = { version = "0.12", features = ["cookie"] }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
rustls = { version = "0.23", optional = true }
tower-http = "0.6"
time = "0.3"
tera = { version = "1", features = ["builtins", "date-locale"] }
sqlx = { version = "0.8", features = ["runtime-tokio"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = { version = "0.7", optional = true }

argon2 = "0.5"
rand = "0.8"
rsa = { version = "0.9", features = ["sha2"] }

reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.22"
url = "2"

regex = "1"
